# spacy-test

./: .gitignore  README.md  install-chinese-pipelines.sh  main.py  pyproject.toml
docs/: [视频]【走向我们的小康生活】广州永庆坊：“微改造”里的大幸福.txt  text-sample.txt  党员干部为什么要“活到老、学到老、修养到老”？.txt  加快从贸易大国走向贸易强国.txt  用好警示教育“清醒剂”.txt
